--- a/.env
+++ b/.env
@@ -1,3 +1,5 @@
 MOONGO_URI=mongodb+srv://muhammadqodir:muhammadqodir@cluster0.hfuhhj8.mongodb.net/startup
 
 SECRET_JWT=olma
+
+SENDGRID_API_KEY=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
