--- a/.prettierrc
+++ b/.prettierrc
@@ -1,8 +1,8 @@
 {
-  "singleQuote": true,
+	"singleQuote": false,
 	"trailingComma": "all",
 	"semi": true,
-	"useTabs": true,
+	"useTabs": false,
 	"editor.formatOnSave": true,
 	"jsxSingleQuote": true,
 	"printWidth": 100,
